# qt-google-analytics

./: .gitmodules  NOTICE  README.md
.github/workflows/: test.yml
src/: chromium-user-agent.cpp  qt-google-analytics.cpp  qt-google-analytics.h  user-agent-client-hints.cpp
tests/: CMakeLists.txt
tests/src/: qt-google-analytics.tests.cpp
